Work on orientation.js and color_manifestinator.js

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 .App {
-  max-width:412px;
-  width:98vw;
-  height:604px;
+  // max-width:412px;
+  width:100vw;
+  height:100vh;
   text-align: center;
 }
 
